# cloud-storage-and-sharing

./: NOTES  README.md  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/: auth_route.py  file_route.py  user_route.py
app/models/: database.py  model.py  pydantic_models.py  schemas.py  types.py
app/pages/: pages_routes.py
app/services/: auth_service.py  file_service.py  user_service.py
app/static/js/: base.js  detail.js  index.js  login.js  register.js
app/storage/: s3_client.py
app/templates/: file-detail.html  index.html  index.js  login.html  register.html
app/utils/: auth_helper  exceptions.py  response.py
extra/: test.py
migrations/: env.py
migrations/versions/: 2dcae6fda51b_added_collection_tables.py  4bb2f8785604_initial_schema.py  6f8e672f06b7_created_database_with_file_and_user_.py  98068e04c847_added_mime_type_to_file_table.py  997c3b74ff50_added_username_to_user_table.py  cd628c9e60d1_added_enum_adapter_to_status_column.py  d50411426696_delted_b2_file_id_line.py  d5ff697c713a_merged_heads.py  db95913cb32b_initial_schema.py  efd421807484_added_granted_by_to_filepermisiontable.py  f3afd19ea687_added_more_option_to_enum_adapter.py
